<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/card_margin"
    app:cardCornerRadius="@dimen/card_corner_radius"
    app:cardElevation="@dimen/card_elevation">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/item_padding">

        <TextView
            android:id="@+id/itemNameTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/item_text_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/deleteButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/quantityLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity_label"
            android:layout_marginTop="@dimen/margin_small"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/itemNameTextView" />

        <TextView
            android:id="@+id/quantityTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            app:layout_constraintStart_toEndOf="@id/quantityLabel"
            app:layout_constraintTop_toTopOf="@id/quantityLabel"
            app:layout_constraintBottom_toBottomOf="@id/quantityLabel" />

        <TextView
            android:id="@+id/priceLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price_label"
            android:layout_marginStart="@dimen/margin_normal"
            app:layout_constraintStart_toEndOf="@id/quantityTextView"
            app:layout_constraintTop_toTopOf="@id/quantityTextView" />

        <TextView
            android:id="@+id/priceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            app:layout_constraintStart_toEndOf="@id/priceLabel"
            app:layout_constraintTop_toTopOf="@id/priceLabel"
            app:layout_constraintBottom_toBottomOf="@id/priceLabel" />

        <ImageButton
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/delete_item"
            android:src="@drawable/ic_delete"
            android:padding="@dimen/icon_padding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView> 
